CSS styling improvements for book component. Fix fo error on cover image src. CSS for scrollbar: TODO: support on scrollable elements

--- a/apps/site/src/app/core/styles/_vars.scss
+++ b/apps/site/src/app/core/styles/_vars.scss
@@ -8,7 +8,7 @@ $card-width: 250px;
 $card-header-height: 50px;
 $body-min-width: 500px;
 $main-menu-width: 12rem;
-$main-content-min-width: calc($body-min-width - $main-menu-width);
+$main-content-min-width: calc(100vw - $main-menu-width);
 $header-height: 3.5rem;
 // == Colors ==
 $default-color: rgb(250 250 250 / 90%);
